PZ-28, PZ-32 | Assembly OS X: + Shell script + File associations + Libs + Added icon resource
PZ-26 | Minor changes:
+ Alert boxes always shown on top
+ Updated App URL
+ Updated License display and processing to work with JRT and holds url info
+ JRT used to retrieve log4j configuration and reserved-keys
+ Properties updates:
   - Pre-alpha specified
   - New logging fields
   - Updated label names
   - Added reserved keys

Environment changes:
+ Log configuration update
+ Added initial functionality to listen to OS open calls (For finder open with… incomplete)
+ Added Seven Zip J Binding dependency
+ Git ignore - Build directories, compressed log files added

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 
 # Log file
 *.log
+*.log.gz
 
 # BlueJ files
 *.ctxt
@@ -36,3 +37,7 @@ hs_err_pid*
 .idea/encodings.xml
 .idea/qaplug_profiles.xml
 PearlZip.iml
+
+# Build directories
+target/
+build/
