--- a/pearl-zip-license/pom.xml
+++ b/pearl-zip-license/pom.xml
@@ -35,6 +35,26 @@
                     <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <version>2.0.0</version>
+                <executions>
+                    <execution>
+                        <id>aggregate-download-licenses</id>
+                        <goals>
+                            <goal>aggregate-download-licenses</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <errorRemedy>warn</errorRemedy>
+                    <cleanLicensesOutputDirectory>false</cleanLicensesOutputDirectory>
+                    <outputEncoding>UTF-8</outputEncoding>
+                    <licensesOutputDirectory>${project.basedir}/src/main/resources/ref</licensesOutputDirectory>
+                    <licensesOutputFile>${project.basedir}/src/main/resources/LICENSE.xml</licensesOutputFile>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
