--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>pearl-zip-ui</module>
         <module>pearl-zip-archive-acc</module>
         <module>pearl-zip-archive-szjb</module>
+        <module>pearl-zip-assembly-osx</module>
     </modules>
 
     <repositories>
@@ -107,26 +108,6 @@
                     <source>15</source>
                     <target>15</target>
                     <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>license-maven-plugin</artifactId>
-                <version>2.0.0</version>
-                <executions>
-                    <execution>
-                        <id>aggregate-download-licenses</id>
-                        <goals>
-                            <goal>aggregate-download-licenses</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <errorRemedy>warn</errorRemedy>
-                    <cleanLicensesOutputDirectory>false</cleanLicensesOutputDirectory>
-                    <outputEncoding>UTF-8</outputEncoding>
-                    <licensesOutputDirectory>${project.basedir}/pearl-zip-license/src/main/resources/ref</licensesOutputDirectory>
-                    <licensesOutputFile>${project.basedir}/pearl-zip-license/src/main/resources/LICENSE.xml</licensesOutputFile>
                 </configuration>
             </plugin>
         </plugins>
