--- a/pearl-zip-archive-acc/pom.xml
+++ b/pearl-zip-archive-acc/pom.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) ${YEAR} 92AK
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -14,13 +18,22 @@
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
+        <commons-compress.version>1.20</commons-compress.version>
+        <xz.version>1.8</xz.version>
     </properties>
+
+    <licenses>
+        <license>
+            <name>BSD 3-Clause</name>
+            <url>http://opensource.org/licenses/BSD-3-Clause</url>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
-            <version>1.20</version>
+            <version>${commons-compress.version}</version>
         </dependency>
         <dependency>
             <groupId>com.ntak</groupId>
@@ -31,7 +44,7 @@
         <dependency>
             <groupId>org.tukaani</groupId>
             <artifactId>xz</artifactId>
-            <version>1.8</version>
+            <version>${xz.version}</version>
         </dependency>
     </dependencies>
 </project>
