--- a/pearl-zip-archive/pom.xml
+++ b/pearl-zip-archive/pom.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ Copyright (c) ${YEAR} 92AK
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -11,7 +15,6 @@
         <version>0.0.0.1</version>
     </parent>
 
-    <groupId>com.ntak</groupId>
     <artifactId>pearl-zip-archive</artifactId>
     <name>PearlZip Archive Logic</name>
     <packaging>jar</packaging>
@@ -21,11 +24,18 @@
         <maven.compiler.target>15</maven.compiler.target>
     </properties>
 
+    <licenses>
+        <license>
+            <name>BSD 3-Clause</name>
+            <url>http://opensource.org/licenses/BSD-3-Clause</url>
+        </license>
+    </licenses>
+
     <dependencies>
         <dependency>
             <groupId>org.greenrobot</groupId>
             <artifactId>eventbus</artifactId>
-            <version>3.2.0</version>
+            <version>${eventbus.version}</version>
         </dependency>
     </dependencies>
 </project>
