--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,7 @@
+<!--
+  ~ Copyright (c) ${YEAR} 92AK
+  -->
+
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
@@ -12,6 +16,7 @@
         <log4j.version>2.14.0</log4j.version>
         <junit.version>5.5.2</junit.version>
         <dryrun.release>true</dryrun.release>
+        <eventbus.version>3.2.0</eventbus.version>
     </properties>
 
     <modules>
@@ -23,6 +28,13 @@
         <module>pearl-zip-archive-szjb</module>
         <module>pearl-zip-assembly-osx</module>
     </modules>
+
+    <licenses>
+        <license>
+            <name>BSD 3-Clause</name>
+            <url>http://opensource.org/licenses/BSD-3-Clause</url>
+        </license>
+    </licenses>
 
     <repositories>
         <repository>
