PZ-28, PZ-33 | Mac native binary; Maven versioning setup | Updated build script to not be bound to a version of th UI module, Assembly has pom packaging, Normalised package naming; Added versioning mechanism at install phase. Removed target build files

--- a/pearl-zip-archive-acc/pom.xml
+++ b/pearl-zip-archive-acc/pom.xml
@@ -13,7 +13,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pearl-zip-ap-commons-archive</artifactId>
+    <artifactId>pearl-zip-archive-acc</artifactId>
 
     <properties>
         <maven.compiler.source>15</maven.compiler.source>
@@ -47,4 +47,34 @@
             <version>${xz.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <id>version-set</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>${project.basedir}/pom.xml</include>
+                            </includes>
+                            <replacements>
+                                <replacement>
+                                    <token>${project.version}</token>
+                                    <value>${pearlzip.next.version}</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
