--- a/pearl-zip-archive/pom.xml
+++ b/pearl-zip-archive/pom.xml
@@ -38,4 +38,34 @@
             <version>${eventbus.version}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <id>version-set</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>${project.basedir}/pom.xml</include>
+                            </includes>
+                            <replacements>
+                                <replacement>
+                                    <token>${project.version}</token>
+                                    <value>${pearlzip.next.version}</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
