--- a/pearl-zip-assembly-osx/pom.xml
+++ b/pearl-zip-assembly-osx/pom.xml
@@ -13,7 +13,7 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
 
     <artifactId>pearl-zip-assembly-osx</artifactId>
     <url>https://pearlzip.92ak.co.uk</url>
@@ -58,7 +58,31 @@
                    </environmentVariables>
                </configuration>
            </plugin>
-       </plugins>
-   </build>
-
+            <plugin>
+                <groupId>com.google.code.maven-replacer-plugin</groupId>
+                <artifactId>replacer</artifactId>
+                <version>1.5.3</version>
+                <executions>
+                    <execution>
+                        <id>version-set</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>replace</goal>
+                        </goals>
+                        <configuration>
+                            <includes>
+                                <include>${project.basedir}/pom.xml</include>
+                            </includes>
+                            <replacements>
+                                <replacement>
+                                    <token>${project.version}</token>
+                                    <value>${pearlzip.next.version}</value>
+                                </replacement>
+                            </replacements>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
