PZ-21,PZ-28,PZ-38,PZ-39,PZ-41,PZ-42,PZ-43,PZ-44 | Disable appropriate options in compressor archives within context menu, Apple Native Build process, Open/Save edit issue with compressor archives, Compressor nested file reintegration, compressor archive issues in native binary, Issue with bz2 archives, Bring new archive windows to the front, Correct clear cache issue | Details below:
PZ-21:
+ Updated controller for archive context menu to enable certain options when not in a compressor archive.

PZ-28:
+ Updated build-pz-osx.sh to be more consistent and sort out some dependency based issues with the reserved-keys file.
+ Added build.sh and gen.sh for reference.
+ Updated maven module pearl-zip-language-pack-en-GB to pearl-zip-lang-pack-en-GB.

PZ-38,PZ-41:
+ Updated Apache Commons Compress uses mondule-info declaration to work with ServiceLoader scans in module.
+ Reordered JarArchiveEntry configuration setup to occur before more generic ZipArchiveEntry.

PZ-39:
+ Added extra option on the On Close Handler to reintegrate nested archive with parent compressor.

PZ-43:
+ Ordering to bring nested objects and new archive screens to the front for New, row-click and Open Event Handlers.

PZ-44:
+ Corrected active migrations pre-condition to clearing caches.

--- a/pearl-zip-ui/pom.xml
+++ b/pearl-zip-ui/pom.xml
@@ -64,7 +64,7 @@
         </dependency>
         <dependency>
             <groupId>com.ntak</groupId>
-            <artifactId>pearl-zip-language-pack-${lang}-${country}</artifactId>
+            <artifactId>pearl-zip-lang-pack-${lang}-${country}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
