PZ-49 | Add log key logging.ntak.pearl-zip.archive-service.listing.exception (en-GB lang pack) | Updated pom of archive service implementations

--- a/pearl-zip-archive-acc/pom.xml
+++ b/pearl-zip-archive-acc/pom.xml
@@ -46,6 +46,11 @@
             <artifactId>xz</artifactId>
             <version>${xz.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ntak</groupId>
+            <artifactId>pearl-zip-lang-pack-${lang}-${country}</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <profiles>
