--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <dryrun.release>true</dryrun.release>
         <eventbus.version>3.2.0</eventbus.version>
         <pearlzip.next.version>${project.version}</pearlzip.next.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <modules>
