--- a/pearl-zip-assembly-osx/pom.xml
+++ b/pearl-zip-assembly-osx/pom.xml
@@ -56,6 +56,7 @@
                    <environmentVariables>
                        <JAVA_HOME>${jdk.location}</JAVA_HOME>
                    </environmentVariables>
+                   <async>false</async>
                </configuration>
            </plugin>
         </plugins>
