--- a/pearl-zip-deploy-common/pom.xml
+++ b/pearl-zip-deploy-common/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ Copyright (c) ${YEAR} 92AK
+  ~ Copyright © 2021 92AK
   -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -15,5 +15,42 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <url>https://pearlzip.92ak.co.uk</url>
+
+    <profiles>
+        <profile>
+            <id>deploy-github</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.basedir}/src/main/bash/deploy-release-github.sh</executable>
+                            <arguments>
+                                <argument>${project.version}</argument>
+                                <argument>${project.codename}</argument>
+                            </arguments>
+                            <environmentVariables>
+                                <JAVA_HOME>${jdk.location}</JAVA_HOME>
+                            </environmentVariables>
+                            <async>false</async>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
