--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <properties>
         <log4j.version>2.14.0</log4j.version>
         <junit.version>5.5.2</junit.version>
+        <junit-platform-runner.version>1.5.2</junit-platform-runner.version>
         <dryrun.release>true</dryrun.release>
         <eventbus.version>3.2.0</eventbus.version>
         <pearlzip.next.version>${project.version}</pearlzip.next.version>
@@ -54,6 +55,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-runner</artifactId>
+            <version>${junit-platform-runner.version}</version>
             <scope>test</scope>
         </dependency>
         <!-- Miscellaneous -->
