--- a/pearl-zip-archive/pom.xml
+++ b/pearl-zip-archive/pom.xml
@@ -73,4 +73,19 @@
             </build>
         </profile>
     </profiles>
+
+   <build>
+       <plugins>
+           <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-compiler-plugin</artifactId>
+               <version>3.8.1</version>
+               <configuration>
+                   <source>15</source>
+                   <target>15</target>
+                   <compilerArgs>--enable-preview</compilerArgs>
+               </configuration>
+           </plugin>
+       </plugins>
+   </build>
 </project>
