--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <pearlzip.next.version>${project.version}</pearlzip.next.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.deploy.skip>true</maven.deploy.skip>
+        <mockito-core.version>3.9.0</mockito-core.version>
+        <testfx.version>4.0.16-alpha</testfx.version>
+        <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
     </properties>
 
     <modules>
@@ -63,6 +66,37 @@
             <version>${junit-platform-runner.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>${openjfx-monocle.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+
         <!-- Miscellaneous -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
