PZ-48| Test framework PearlZip | Updating parameters on maven compile plugin to ensure UI build succeeds

--- a/pearl-zip-ui/pom.xml
+++ b/pearl-zip-ui/pom.xml
@@ -159,8 +159,11 @@
                 <configuration>
                     <source>15</source>
                     <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <compilerArgs>--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</compilerArgs>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                        <arg>--add-opens</arg>
+                        <arg>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
