PZ-34 | Handle tar filename too long (directory paths length > 100 bytes/characters as per tar spec definition limitations) + Utilising PAX Headers when creating tar archives + Utilising Apache Commons Compress Read service to handle this feature intrinsically + Updated tests and provided appropriate resources
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-ui/src/main/resources/application.properties
+++ b/pearl-zip-ui/src/main/resources/application.properties
@@ -3,6 +3,8 @@
 #
 
 configuration.ntak.pearl-zip.provider.priority.enabled.com.ntak.pearlzip.archive.szjb.pub.SevenZipArchiveService=true
+# Overriding 7ZJB implementation as PAX Headers is supported by Apache Commons Compress library...
+configuration.ntak.pearl-zip.provider.priority.com.ntak.pearlzip.archive.acc.pub.CommonsCompressArchiveReadService=2
 configuration.ntak.pearl-zip.resizeable=false
 configuration.ntak.pearl-zip.app-name=PearlZip
 configuration.ntak.pearl-zip.version=${pearl-zip.version} Pre-Alpha
