PZ-127 | Remove EventBus dependency + Corrected unit tests failures due to runtime dependency issues
Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-archive-szjb/pom.xml
+++ b/pearl-zip-archive-szjb/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>pearl-zip-lang-pack-${lang}-${country}</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.ntak</groupId>
+            <artifactId>ntak-testfx-util</artifactId>
+            <version>${parent.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <profiles>
