--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <mockito-core.version>3.9.0</mockito-core.version>
         <testfx.version>4.0.16-alpha</testfx.version>
         <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
+        <javafx.version>15.0.1</javafx.version>
     </properties>
 
     <modules>
