PZ-108,PZ-133 | Zip4J Archive Provider Implementation; Error consumer to raise alerts from Archive Service Issues
PZ-108:
+ Made continue default button on password entry screen
+ Compression utilises Settings set for Zip4j

PZ-133:
+ Implemented Error consumer (EventBus subscriber)
+ Registered consumers as part of start up process
+ Raised error messages from Zip4j plugin service as appropriate
+ Refactored ProgressMessage POJO into class from record to take advantage of inheritance to provide ErrorMessage payload functionality
+ Updated logging as appropriate

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin.properties
+++ b/pearl-zip-archive-zip4j/src/main/resources/zip4j_plugin.properties
@@ -7,15 +7,36 @@
 ###################################################################################################
 
 logging.ntak.pearl-zip.zip4j.adding-file=Adding file %s...
-logging.ntak.pearl-zip.zip4j.issue-adding-file=Issue adding to zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
 logging.ntak.pearl-zip.zip4j.deleting-file=Deleting file %s...
-logging.ntak.pearl-zip.zip4j.issue-deleting-file=Issue deleting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
-logging.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
-logging.ntak.pearl-zip.zip4j.issue-creating-archive=Issue creating zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
 logging.ntak.pearl-zip.zip4j.issue-generating-metadata=Issue generating metadata for archive %s
 
 logging.ntak.pearl-zip.zip4j.password-success=Success
 logging.ntak.pearl-zip.zip4j.password-fail=Password invalid
+
+logging.ntak.pearl-zip.zip4j.issue-listing-archive=Issue listing entries from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+title.ntak.pearl-zip.zip4j.issue-listing-archive=Issue listing entries from archive
+header.ntak.pearl-zip.zip4j.issue-listing-archive=The archive %s could not be interrogated for contents
+body.ntak.pearl-zip.zip4j.issue-listing-archive=Exception %s was thrown on the attempt to list contents of the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.zip4j.issue-creating-archive=Issue creating zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+title.ntak.pearl-zip.zip4j.issue-creating-archive=Issue creating archive
+header.ntak.pearl-zip.zip4j.issue-creating-archive=The archive %s could not be created
+body.ntak.pearl-zip.zip4j.issue-creating-archive=Exception %s was thrown on the attempt to create the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.zip4j.issue-deleting-file=Issue deleting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+title.ntak.pearl-zip.zip4j.issue-deleting-file=Issue deleting archive
+header.ntak.pearl-zip.zip4j.issue-deleting-file=An entry could not be removed from archive %s
+body.ntak.pearl-zip.zip4j.issue-deleting-file=Exception %s was thrown on the attempt to remove an entry from the archive. Further details can be found below.
+
+logging.ntak.pearl-zip.zip4j.issue-adding-file=Issue adding to zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+title.ntak.pearl-zip.zip4j.issue-adding-file=Issue adding to archive
+header.ntak.pearl-zip.zip4j.issue-adding-file=An entry could not be added to archive %s
+body.ntak.pearl-zip.zip4j.issue-adding-file=Exception %s was thrown on the attempt to add an entry to archive. Further details can be found below.
+
+logging.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting from zip archive.\nException thrown: %s\nException message: %s\nStack trace:\n%s
+title.ntak.pearl-zip.zip4j.issue-extracting-file=Issue extracting archive
+header.ntak.pearl-zip.zip4j.issue-extracting-file=The archive %s could not be extracted
+body.ntak.pearl-zip.zip4j.issue-extracting-file=Exception %s was thrown on the attempt to extract from the archive. Further details can be found below.
 
 
 ###################################################################################################
