PZ-95,PZ-107 | Fail clear cache when a long-running process is active; Arbitrary single file (non-tarball) compressor archive creation
PZ-95:
+ Implemented locking functionality to ensure that the clear cache process takes exclusive priority over any zip modification processes to ensure expected behaviour when performing those zip operations

PZ-107:
+ Fixed breaking unit test because of change

Signed-off-by: Aashutos Kakshepati <aashutos_kakshepati@hotmail.com>

--- a/pearl-zip-ui/src/main/resources/application.properties
+++ b/pearl-zip-ui/src/main/resources/application.properties
@@ -13,3 +13,4 @@ configuration.ntak.pearl-zip.weblink=https://pearlzip.92ak.co.uk
 configuration.ntak.pearl-zip.license-location=LICENSE.xml
 configuration.ntak.pearl-zip.license-override-location=LICENSE-OVERRIDE.xml
 configuration.ntak.pearl-zip.commit-hash=:: HASH ::
+configuration.ntak.pearl-zip.concurrency.lock-poll-timeout=100
