--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
         <pearl-zip.version>0.0.0.2</pearl-zip.version>
         <zip4j.version>2.8.0</zip4j.version>
         <javafx.version>15.0.1</javafx.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.deploy.skip>true</maven.deploy.skip>
+        <deploy.settings.loc>${project.basedir}/scripts/settings.properties</deploy.settings.loc>
     </properties>
 
     <dependencies>
@@ -84,6 +87,43 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>deploy-github</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.6.0</version>
+                        <executions>
+                            <execution>
+                                <phase>deploy</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>${project.basedir}/scripts/deploy-release-github.sh</executable>
+                            <arguments>
+                                <argument>${project.version}</argument>
+                                <argument>${deploy.settings.loc}</argument>
+                            </arguments>
+                            <environmentVariables>
+                                <JAVA_HOME>${jdk.location}</JAVA_HOME>
+                            </environmentVariables>
+                            <async>false</async>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
