--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
         <maven.deploy.skip>true</maven.deploy.skip>
         <deploy.settings.loc>${project.basedir}/scripts/settings.properties</deploy.settings.loc>
         <pearlzip.zip4j.next.version>${project.version}</pearlzip.zip4j.next.version>
+        <pearl-zip-ui.test.version>0.0.0.3</pearl-zip-ui.test.version>
+        <testfx.version>4.0.16-alpha</testfx.version>
+        <openjfx-monocle.version>jdk-12.0.1+2</openjfx-monocle.version>
+        <eventbus.version>3.2.0</eventbus.version>
+        <nsmenufx.version>3.0.2</nsmenufx.version>
+        <lang>en</lang>
+        <country>GB</country>
     </properties>
 
     <dependencies>
@@ -80,7 +87,56 @@
         <dependency>
             <groupId>com.ntak</groupId>
             <artifactId>ntak-testfx-util</artifactId>
+            <version>${pearl-zip-ui.test.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ntak</groupId>
+            <artifactId>pearl-zip-ui</artifactId>
+            <type>test-jar</type>
+            <version>${pearl-zip-ui.test.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ntak</groupId>
+            <artifactId>pearl-zip-ui</artifactId>
             <version>${pearl-zip.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ntak</groupId>
+            <artifactId>pearl-zip-lang-pack-${lang}-${country}</artifactId>
+            <version>${pearl-zip.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>${openjfx-monocle.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>de.jangassen</groupId>
+            <artifactId>nsmenufx</artifactId>
+            <version>${nsmenufx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.greenrobot</groupId>
+            <artifactId>eventbus</artifactId>
+            <version>${eventbus.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
